--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -23,7 +23,8 @@
     "react-router-dom": "^7.2.0",
     "react-scripts": "^3.0.1",
     "react-toastify": "^11.0.5",
-    "sonner": "^2.0.1"
+    "sonner": "^2.0.1",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
