--- a/Backend/package.json
+++ b/Backend/package.json
@@ -24,6 +24,7 @@
     "node-fetch": "^3.3.2",
     "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
+    "razorpay": "^2.9.6",
     "sharp": "^0.33.5"
   },
   "description": ""
