--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^6.4.6",
     "@tailwindcss/vite": "^4.0.9",
     "axios": "^1.8.1",
+    "formik": "^2.4.6",
     "html2canvas": "^1.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -24,6 +25,7 @@
     "react-scripts": "^3.0.1",
     "react-toastify": "^11.0.5",
     "sonner": "^2.0.1",
+    "yup": "^1.6.1",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
