--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,11 +13,13 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.6",
-    "@mui/material": "^6.4.6",
+    "@mui/material": "^6.4.7",
     "@tailwindcss/vite": "^4.0.9",
     "axios": "^1.8.1",
     "formik": "^2.4.6",
     "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.0",
+    "jspdf-autotable": "^5.0.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
